aws/projects/002-milliseconds-converter/cf-template.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  Cloudformation template for milliseconds converter application. This app runs on application load balancer. In addition it is observed by autoscaling group.
  
Resources:
  ELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Enable HTTP for ALB
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

WebServerSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupDescription: Enable HTTP for ALB
    SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
        SourceSecurityGroupId: !GetAtt ELBSecurityGroup.GroupId

WebServerLaunchTemplate:
  Type: AWS::EC2::LaunchTemplate
  Properties:
    LaunchTemplateData:
      ImageId: ami-0947d2ba12ee1ff75
      InstanceType: t2.micro
      Keyname: aaa
      SecurityGroupIds:
      - GetAtt! WebServerSecurityGroup.GroupId
      TagSpecifications:
      - ResourceType: instance
        Tag:
        - Key: Name
          Value: !Sub Web Server of ${AWS:StackName}
      UserData:
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install python3 -y
            pip3 install flask
            TOKEN="cd3bc06027e0987e3c633a2c908707cdb35468cd"
            FOLDER="XXXXXXXXXXXXXX"
            curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L "$FOLDER"templates/index.html
            curl -s --create-dirs -o "/home/ec2-user/templates/result.html" -L "$FOLDER"templates/result.html
            curl -s --create-dirs -o "/home/ec2-user/app.py" -L "$FOLDER"app.py
            python3 /home/ec2-user/app.py

  

  
Outputs:
